--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,30 @@
-# This is a basic workflow to help you get started with Actions
+name: CICD_using_aws_ec2
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
       - name: Code Clean
         run: mvn clean
 
-      - name: Code validate
+      - name: Code Validate
         run: mvn validate
 
       - name: Code Build
@@ -38,19 +33,40 @@ jobs:
       - name: Code Test
         run: mvn test
 
-      - name: Code package
-        run: mvn package  
+      - name: Code Package
+        run: mvn package
+
+      - name: Save JAR Artifact
+        run: mkdir -p artifacts && cp target/*.jar artifacts/
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/Cab:v1
+
   deploy:
     needs: build
     runs-on: [aws-ec2]
     steps:
-      - name:  install && Pull Image from docker hub
+      - name: Install & Pull Image from Docker Hub
         run: |
           sudo apt install docker.io -y
-          sudo docker pull sohaliya/spring-boot-github-action-demo:latest
-            
-      - name: Delete old container
-        run: sudo docker rm -f spring-boot-app-container
-      - name: Run Docker Image
-        run: sudo docker run -d -p 8080:8080 --name spring-boot-app-container sohaliya/spring-boot-github-action-demo
+          sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/Cab:v1
+          
+      - name: Delete Old Container
+        run: sudo docker rm -f Cab || true
 
+      - name: Run Docker Image
+        run: sudo docker run -d -p 8080:8080 --name Cab ${{ secrets.DOCKERHUB_USERNAME }}/Cab:v1
