--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         run: mvn package
 
       - name: Save JAR Artifact
-        run: mkdir -p artifacts && cp target/*.jar artifacts/
+        run: mkdir -p artifacts && cp target/car-booking.webapp.war artifacts/
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -54,7 +54,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/Cab:v1
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/car-booking:v1
 
   deploy:
     needs: build
@@ -63,10 +63,10 @@ jobs:
       - name: Install & Pull Image from Docker Hub
         run: |
           sudo apt install docker.io -y
-          sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/Cab:v1
+          sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/car-booking:v1
           
       - name: Delete Old Container
-        run: sudo docker rm -f Cab || true
+        run: sudo docker rm -f car-booking || true
 
       - name: Run Docker Image
-        run: sudo docker run -d -p 8080:8080 --name Cab ${{ secrets.DOCKERHUB_USERNAME }}/Cab:v1
+        run: sudo docker run -d -p 8080:8080 --name Cab ${{ secrets.DOCKERHUB_USERNAME }}/car-booking:v1
